sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/Feedstock_Leads__c.object-meta.xml
<CustomObject>
    <description>Leads for feedstock suppliers</description>
    <label>Feedstock Leads</label>
    <nameField>
        <displayFormat>Lead-{000000}</displayFormat>
        <label>Feedstock Leads Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedstock Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>