sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Additional_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Instructions__c</fullName>
    <label>Additional Instructions</label>
    <type>TextArea</type>
</CustomField>