sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Amount_of_sample_requested_kg__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_sample_requested_kg__c</fullName>
    <inlineHelpText>Please input the amount of sample, in kg, requested in order to conduct this test</inlineHelpText>
    <label>Amount of Sample Requested (kg)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>