sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Contact_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Phone__c</fullName>
    <label>Contact&#39;s Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>