sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Cost_to_Sanergy__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Sanergy__c</fullName>
    <inlineHelpText>Cost incurred by Sanergy in order to source the feedstock</inlineHelpText>
    <label>Cost to Sanergy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>