sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Current_Disposal_Method__c.field-meta.xml
<CustomField>
    <fullName>Current_Disposal_Method__c</fullName>
    <label>Current Disposal Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>