sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Date_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Delivery__c</fullName>
    <inlineHelpText>Date that samples were delivered to the lab.</inlineHelpText>
    <label>Date of Delivery</label>
    <type>Date</type>
</CustomField>