sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Date_Samples_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Samples_Received__c</fullName>
    <inlineHelpText>Date that samples were received by the lab</inlineHelpText>
    <label>Date: Samples Received</label>
    <type>Date</type>
</CustomField>