sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Feedstock_Description__c.field-meta.xml
<CustomField>
    <fullName>Feedstock_Description__c</fullName>
    <inlineHelpText>Brief description of feedstock type (i.e. corn cobs, cow manure, etc.)</inlineHelpText>
    <label>Feedstock Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>