sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Feedstock_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Feedstock_Supplier__c</fullName>
    <inlineHelpText>Name of company or organization supply feedstock</inlineHelpText>
    <label>Feedstock Supplier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>