sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/GPS_Location__c.field-meta.xml
<CustomField>
    <fullName>GPS_Location__c</fullName>
    <label>GPS Location</label>
    <required>true</required>
    <scale>2</scale>
    <type>Location</type>
</CustomField>