sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <inlineHelpText>Industry to which feedstock supplier belongs (ex. Food Processing, Agriculture, etc.)</inlineHelpText>
    <label>Industry</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>