sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Lab_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Lab_Deadline__c</fullName>
    <inlineHelpText>Set the deadline by which the lab should have the requested tests completed.</inlineHelpText>
    <label>Lab Deadline</label>
    <type>Date</type>
</CustomField>