sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Monthly_Cost_of_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Cost_of_Disposal__c</fullName>
    <label>Monthly Cost of Disposal</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>