sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Number_of_Samples_Received__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Samples_Received__c</fullName>
    <label>Number of Samples Received</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>