sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact__c</fullName>
    <inlineHelpText>Name of person who is Sanergy&#39;s point person with the supplier</inlineHelpText>
    <label>Point of Contact</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>