sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Potential_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Potential_Annual_Volume__c</fullName>
    <inlineHelpText>estimated annual volume of waste available in tons or m3</inlineHelpText>
    <label>Potential Annual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>