sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Procurement_Delivery_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Delivery_Deadline__c</fullName>
    <inlineHelpText>Deadline by which samples should be collected and delivered to the appropriate lab.</inlineHelpText>
    <label>Procurement &amp; Delivery Deadline</label>
    <type>Date</type>
</CustomField>