sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Requested_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Completion_Date__c</fullName>
    <inlineHelpText>Requested deadline by which lab tests should be completed and results sent back.</inlineHelpText>
    <label>Requested Completion Date</label>
    <type>Date</type>
</CustomField>