sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Requesting_Team__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Team__c</fullName>
    <label>Requesting Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>