sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Sample_Collected_kg__c.field-meta.xml
<CustomField>
    <fullName>Sample_Collected_kg__c</fullName>
    <inlineHelpText>Amount of sample (in kg) collected and delivered to the lab for testing</inlineHelpText>
    <label>Sample Collected (kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>