sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Sample_Source__c.field-meta.xml
<CustomField>
    <fullName>Sample_Source__c</fullName>
    <description>Supplier from which sample was taken</description>
    <inlineHelpText>Supplier from which sample was taken</inlineHelpText>
    <label>Sample Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>