sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Samples_Received__c.field-meta.xml
<CustomField>
    <fullName>Samples_Received__c</fullName>
    <label>Samples Received?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>