sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Sampling_by__c.field-meta.xml
<CustomField>
    <fullName>Sampling_by__c</fullName>
    <inlineHelpText>Name of person who collected the feedstock sample</inlineHelpText>
    <label>Sampling by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>