sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Sampling_Date__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Date__c</fullName>
    <inlineHelpText>Date sample was collected</inlineHelpText>
    <label>Sampling Date</label>
    <type>Date</type>
</CustomField>