sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Supplier_Phone__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Phone__c</fullName>
    <inlineHelpText>general company or organizational phone</inlineHelpText>
    <label>Supplier Phone</label>
    <type>Phone</type>
</CustomField>