sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Supply_ID__c.field-meta.xml
<CustomField>
    <fullName>Supply_ID__c</fullName>
    <description>unique ID for Feedstock Supply</description>
    <displayFormat>SP-{000000}</displayFormat>
    <label>Supply ID</label>
    <type>AutoNumber</type>
</CustomField>