sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Supply_Status__c.field-meta.xml
<CustomField>
    <fullName>Supply_Status__c</fullName>
    <label>Supply Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Screening</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Vending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>