sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Testing_Lab_1__c.field-meta.xml
<CustomField>
    <fullName>Testing_Lab_1__c</fullName>
    <inlineHelpText>Please indicate the name of the lab where samples should be sent (i.e. Sanergy, Cropnuts)</inlineHelpText>
    <label>Testing Lab 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sanergy Lab</fullName>
            </value>
            <value>
                <fullName>Cropnuts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>