sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Testing_Lab_2__c.field-meta.xml
<CustomField>
    <fullName>Testing_Lab_2__c</fullName>
    <label>Testing Lab 2 (optional)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sanergy</fullName>
            </value>
            <value>
                <fullName>Cropnuts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>