sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Tests_Requested__c.field-meta.xml
<CustomField>
    <fullName>Tests_Requested__c</fullName>
    <inlineHelpText>List all requested lab testing for feedstock samples (ex. pathogen count, C:N ration, etc.)</inlineHelpText>
    <label>Tests Requested</label>
    <type>TextArea</type>
</CustomField>