sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Tests_Requested_at_Testing_Lab_1__c.field-meta.xml
<CustomField>
    <fullName>Tests_Requested_at_Testing_Lab_1__c</fullName>
    <inlineHelpText>List all requested lab testing for feedstock samples (ex. pathogen count, C:N ration, etc.) that should be conducted at Testing Lab 1</inlineHelpText>
    <label>Tests Requested at Testing Lab 1</label>
    <type>TextArea</type>
</CustomField>