sfSandBoxCode/force-app/main/default/objects/Feedstock_Leads__c/fields/Tests_Requested_at_Testing_Lab_2__c.field-meta.xml
<CustomField>
    <fullName>Tests_Requested_at_Testing_Lab_2__c</fullName>
    <inlineHelpText>List all requested lab testing for feedstock samples that should be conducted at Testing Lab 2</inlineHelpText>
    <label>Tests Requested at Testing Lab 2</label>
    <type>TextArea</type>
</CustomField>